--- a/cog.yaml
+++ b/cog.yaml
@@ -24,7 +24,7 @@ build:
     - "lib==4.0.0"
     - "librosa==0.9.1"
     - "numpy==1.23.5"
-    - "onnxruntime_gpu"
+    - "onnxruntime_gpu==1.18.1"
     - "praat-parselmouth>=0.4.2"
     - "pedalboard==0.7.7"
     - "pydub==0.25.1"
@@ -33,7 +33,7 @@ build:
     - "scipy==1.11.1"
     - "soundfile==0.12.1"
     - "--find-links https://download.pytorch.org/whl/torch_stable.html"
-    - "torch==2.0.1+cu118"
+    - "torch==2.3.1+cu118"
     - "torchcrepe==0.0.20"
     - "tqdm==4.65.0"
     - "yt_dlp==2023.7.6"
